css/custom.css
/* ... */
*[bgline='1']:before {
  right: 1px;
  background-position-x: right;
  left: auto;
}

*[bgline='2']:after,
*[bgline='2']:before {
  content: '';
  position: absolute;
  pointer-events: none;
  width: 50%;
  height: 100%;
  background: red;
  top: 0;
  background: url(https://assets.website-files.com/624c5364ec3046603b0a108f/624d7883da82bf2a87ea1653_soldoutbg.svg);
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position-x: left;
  left: 1px;
}

*[bgline='2']:before {
  right: 1px;
  background-position-x: right;
  left: auto;
}

*[bgline='3']:after,
*[bgline='3']:before {
  content: '';
  position: absolute;
  pointer-events: none;
  width: 50%;
  height: 100%;
  background: red;
  top: 0;
  background: url(https://uploads-ssl.webflow.com/624c5364ec3046603b0a108f/62a09552973cac62813658dd_Subtract.svg);
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position-x: left;
  left: 1px;
}

*[bgline='3']:before {
  right: 1px;
  background-position-x: right;
  left: auto;
}

.year-horizontal.first,
.cursor {
  pointer-events: none;
}

.breadcrumbs-link:after {
  content: ' → ';
  white-space: pre;
}

.breadcrumbs-link:nth-last-child(1):after {
  display: none;
}

.search-line-input {
  background-position-y: calc(100% - 4rem);
}

.catalog-column:after {
  content: '';

  content: '';
  position: absolute;
  z-index: -1;
  background: white;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  top: 42rem;
  border-radius: 60px 0px 0px 0px;
}

.catalog-column.fest-col:after {
  top: 0rem;
}

.cms-tems .cms-ul:nth-last-child(1) .cms-li:nth-last-child(1) {
  border: none;
}

.cms-li_tags-div.in-left .cms-li_tag-link {
  border-radius: 5px;
  margin-right: 10rem;
}

.ui_alert-block a:after {
  content: ' →';
}

.event-row_right-col > h2 {
  margin-top: 55rem;
}

.yvisit-styk a:nth-child(2) {
  margin-top: 19rem;
}

a,
* {
  text-decoration-skip-ink: none;
}

.payment-tabs {
  width: calc(100% + 40rem);
}

p strong {
  font-weight: 500;
}

.rich.cont p {
  font-size: 20rem;
  line-height: 30rem;
  color: #030e14;
  margin-bottom: 10rem;
}

.rich.cont p a {
  color: #030e14;
  text-decoration: none;
  font-weight: 500;
}

.form-filter-press .filter-chek {
  margin-right: 20rem;
}

.filter-chek .w--redirected-checked ~ span {
  text-decoration: underline;
}

.black-theme * {
  color: white;
}

.navbar.grey-head *,
.navbar.grey-head-scroll * {
  color: white;
}

.navbar.grey-head,
.navbar.grey-head-scroll {
  transition: all 500ms ease;
  background-color: #030e14;
}

.navbar.grey-head .r-head-sec a,
.navbar.grey-head-scroll .r-head-sec a {
  color: white;
  filter: invert(1);
}

.navbar.grey-head .r-head-sec a div,
.navbar.grey-head-scroll .r-head-sec a div {
  color: black;
}

.history-page header .right-header *,
.history-page .navbar {
  transition: all 500ms ease;
}

.history-page .navbar {
  background-color: #f5f5f0;
}

.ready-hist header .right-header * {
  color: white;
}

.ready-hist .navbar {
  background-color: transparent;
}

.year-lottie g g:nth-child(1) path {
  stroke: #dcca99;
  stroke-opacity: 0.3;
  stroke-width: 5px;
}

.year-lottie g g:nth-child(2) path {
  stroke: #dcca99;
  stroke-width: 8px;
}

.year-btn {
  height: 10rem;
}

.year-btn .year-in-counter {
  transform: scale(0);
  opacity: 0;
}

.year-btn .year-img {
  opacity: 1;
}

.year-btn.active {
  height: 100rem;
}

.year-btn.active .year-in-counter {
  transform: scale(1);
  opacity: 1;
}

.year-btn.active .year-img {
  opacity: 0;
}

.year-big-counter {
  transition: all 500ms cubic-bezier(1, 0.258, 0.45, 0.913);
}

.year-big-counter {
  color: #030e14;
}

.year-big-counter.second-con {
  color: #030e1410;
}

.year-big-counter.strk {
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #dcca99;
  color: transparent;
}

.scroll-view.-touchable {
  overflow: hidden;
  height: 100vh;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
}

.slider-days_month-days {
  counter-reset: slidercard;
}

.slider-days_rad .slider-days_rad-ins:after {
  counter-increment: slidercard;
  content: counter(slidercard);
}

.w-form-formradioinput--inputType-custom.w--redirected-checked {
  border-top-width: 0px;
  border-bottom-width: 0px;
  border-left-width: 0px;
  border-right-width: 0px;
}

.slider-days_rad-ins {
  box-shadow: none !important;
}

.slider-wvwnts_slide {
  min-width: calc(100% - 20rem);
}

.splide__pagination.splide__pagination--ltr,
.splide__arrows.splide__arrows--ltr,
.slide_sr {
  display: none !important;
}

.splide__track span {
  font-size: 0px;
}

.burger-menu * {
  color: white;
}

.burger-menu .foo-marger {
  background-color: rgb(255 255 255 / 20%);
}

.burger-menu .link-soc {
  border-color: rgb(255 255 255 / 50%);
}

.search-row .cms-li_tag-link {
  background: white;
}

/* Custom styles */

.h1-75-90 {
  text-transform: uppercase;
}

/* Custom styles */

.cms-li_actions-div.biger .booktickets-btn {
  margin-bottom: 12rem;
  margin-right: 0px;
}

.filters-line-text {
  display: none;
}

.filters-line-text--active {
  display: block;
}

.no-event-message {
  font-size: 30px;
  line-height: 45px;
}

#date-picker,
.hasDatepicker {
  width: 100px;
  min-width: unset;
  border: none;
  color: #030e14;
  font-size: 15rem;
  line-height: 25rem;
  letter-spacing: 0.05em;
  text-decoration: none;
  text-transform: uppercase;
}

.event-avatar > img {
  height: 100%;
  object-fit: cover;
}

#date-picker::placeholder,
.hasDatepicker::placeholder {
  color: #030e14;
}

.calendar-btn:hover #date-picker::placeholder,
.calendar-btn:hover .hasDatepicker::placeholder {
  color: #dcca99;
}

[type='checkbox']:checked + span,
[type='radio']:checked + span {
  border-color: rgba(3, 14, 20, 0.1);
  background: #f1ead6;
}

.slider-wvwnts {
  width: 100%;
}

.wo-slider {
  position: relative;
  width: 100%;
  z-index: 10;
}

.wo-slide {
  padding-right: 20rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  user-select: none;
}
/* ... */

